fixed width, breakpoints, and border radius on mobile

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -25,7 +25,6 @@ Login/Sign up: splash page styling
 	h1 {
 		color: $primarycolor_light;
 		text-transform: uppercase;
-		// font-size: 3em;
 		letter-spacing: 4px;
 		text-shadow: 3px 4px $primarycolor_accentdark;
 		text-align: center;
@@ -147,21 +146,6 @@ Movie poster styling
 	}
 }
 
-@media screen and (max-width: 590px) {
-	#filters button {
-		display: block;
-		width: 100%;
-	}
-
-	#filters button:not(:first-child) {
-		border: none;
-	}
-
-	.poster-display-unit {
-		clear: both;
-	}
-}
-
 //This is to put the X over the image of the poster (hopefully)
 .poster-display-unit {
    position: relative;
@@ -223,5 +207,45 @@ button[watched="true"] {
 
 div[watched="false"] {
   display: none;
+}
+
+//Buttons originally broke at 590px
+@media screen and (max-width: 767px) {
+	#filters {
+		button {
+			display: block;
+			width: 100%;
+		}
+		button:first-child {
+			border-radius: 15px 15px 0 0;
+		}
+		button:last-child {
+			border-radius: 0 0 15px 15px;
+		}
+	}
+
+	#filters button:not(:first-child) {
+		border: none;
+	}
+
+	.poster-display-unit {
+		clear: both;
+	}
+
+	.myposter, .poster {
+   min-height: 250px;
+   h3 {
+   	position: absolute;
+    color: white;
+    top: 25px;
+    right: 20px;
+   }
+
+   img {
+   	width: 100%;
+   	max-height: 800px;
+   }
+	}
+
 }
 
